axelor-web/src/main/webapp/css/view.form.css
/* ... */
.form-item-container input {
	height: 26px;
	padding: 2px 6px;
}

.form-item-container[style *= width] input {
	min-width: inherit;
}

.form-item-container input,
.form-item-container input:focus,
.form-item-container textarea,
.form-item-container textarea:focus {
	outline-style: none;
}

.form-item-container .small-input input,
.form-item-container input.small-input {
	min-width: 50px;
	height: 26px;
}

.form-item-container input[type="radio"],
.form-item-container input[type="checkbox"] {
	width: auto;
	min-width: inherit;
	height: inherit;
	margin-top: 6px !important;
}

.form-item-container label.checkbox {
	padding-right: 6px;
}

.form-item-container.readonly label.checkbox {
	cursor: default;
}

.form-item-container label.checkbox input[type="checkbox"] {
	margin-top: 4px !important;
}

.form-item-container button {
	padding: 2px 10px 2px;
	min-width: 26px;
	height: 26px;
	overflow: hidden;
	white-space: nowrap;
}

.form-item-container textarea {
	font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
	resize: vertical;
}

table.form-layout fieldset {
	padding: 4px 0;
}

.form-item-container.readonly > a,
.form-item-container.readonly > input,
.form-item-container.readonly > span.display-text {
	padding-left: 2px;
}

.form-item-container.readonly > a {
	line-height: 24px;
	color: #0088cc;
}

.form-item-container.datetime input {
	min-width: 100px;
}

.form-item-container.datetime-item input {
	min-width: 134px;
}

.form-item-container > input.display-text {
	min-width: 100px;
	text-overflow: ellipsis;
	overflow: hidden;
	border: none;
	border-radius: 0;
	box-shadow: none;
	background: transparent;
}

.form-item-container.many2one-item.readonly {
	padding-top: 1px;
}

.picker-input {
	box-sizing: border-box;
}

.picker-input > input {
	margin: 0;
	width: 100%;
}

.picker-input > .picker-icons {
	position: absolute;
	display: inline-block;
	white-space: nowrap;

	top: 0;
	right: 3px;
	height: 100%;
}

.picker-input > .picker-icons > i[class^=icon] {
	cursor: pointer;
	margin-right: 1px;
	padding: 2px;
	padding-top: 3px;
	display: inline-block;
	line-height: 20px;
}

.picker-input > input,
.picker-icons-1 > input {
	padding-right: 18px !important;
}

.picker-icons-2 > input {
	padding-right: 36px !important;
}

.picker-icons-3 > input {
	padding-right: 54px !important;
}

.picker-icons-4 > input {
	padding-right: 72px !important;
}

table.form-layout .tabbable-tabs .nav-tabs {
	margin-bottom: 0px;
}

table.form-layout .tabbable-tabs .tab-content {
	position: relative;
	padding: 4px;
	border: 1px solid #DDD;
	border-top: 0;
	background-color: #fff;
}

table.form-layout td.form-item .stackbar {
	position: relative;
}

table.form-layout td.form-item .stackbar.inline-editable {
	min-height: 200px;
}

table.form-layout td.form-item .stackbar.readonly .edit-icon i:before {
	content: "\f044";
}
	
.icons-bar {
	display: inline-block;
	padding-top: 4px;
}

.icons-bar i {
	margin: 2px;
	padding: 2px;
	cursor: pointer;
}

table.form-layout td.form-item .slickgrid {
	position: absolute;
	left: 0px; right: 0px;
	top: 26px; bottom: 0px;
	border-top: none;
}

td.form-item > * {
	position: relative;	
}

.border-box,
.bordered-box {
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	    -ms-box-sizing: border-box;
	        box-sizing: border-box;
}

.bordered,
.bordered-box {
	border: 1px solid #DDD;
	-webkit-border-radius: 4px;
	   -moz-border-radius: 4px;
	    -ms-border-radius: 4px;
	        border-radius: 4px;
}

.form-item .disabled-overlay {
	position: absolute;
	top: 0; left: 0; right: 0; bottom: 0;
	z-index: 10;
}

.form-item .form-item-group > .disabled-overlay {
	top: 12px;
}

.form-item .form-item-group[x-show-title="false"] > .disabled-overlay {
	top: 0;
}

.ui-state-disabled .ui-state-disabled {
	opacity: 1;
}

.form-item .form-item-group {
	padding: 0;
}

.form-item .form-item-group.bordered-box {
	padding: 4px;
	padding-top: 0;
}

.form-item .form-item-group > legend i[class^=icon] {
	color: #CCC;
	height: 10px;
	margin-right: 4px;
	display: inline-block;
	cursor: pointer;
}

.form-item .form-item-group > legend i[class^=icon]:hover {
	 text-decoration: none;
	 color: inherit;
}

.form-item .form-item-group > legend {
	
	width: auto;
	margin: 0;
	margin-left: 10px;
	padding: 0 4px;
		
	font-size: inherit;
	line-height: 1.4em;
	
	border: none;
}

.form-item .form-item-portlet,
.form-item .form-item-portlet .portlet {
	min-height: 250px;
}

.form-item .image-item div.btn-group {
	position: absolute;
	left: 20px;
	bottom: 12px;
}

.form-item .nested-editor > legend > span.legend-toolbar {
	padding-left: 4px;
}

.form-item .nested-editor {
	margin-top: -3px !important;
}

.form-item .nested-editor.inline-form {
	position: relative;
	border: 0;
	padding-top: 30px;
}

.form-item .nested-editor.detail-form {
	border-top: 0;
	padding-top: 8px; 
}

.form-item .form-item-container.ng-invalid > textarea,
.form-item .form-item-container.ng-invalid > .picker-input input,
.form-item .form-item-container.ng-invalid > .ui-spinner input,
.form-item .form-item-container.ng-invalid > input,
.form-item .form-item-container.ng-invalid > .tag-select,
.form-item .input-append.ng-invalid > input,
.form-item .picker-input.ng-invalid > input {
	border-color: #B94A48;
}

.form-item .form-item-container.ng-invalid:focus,
.form-item .form-item-container.ng-invalid > input:focus,
.form-item .picker-input.ng-invalid > input:focus {
	border-color: #953B39;
	
	-webkit-box-shadow: 0 0 6px #D59392;
	   -moz-box-shadow: 0 0 6px #D59392;
	        box-shadow: 0 0 6px #D59392;
}

.form-item form {
	margin: 0;
}

.form-item div.code-editor {
	border: 1px solid #DDD;
}

.form-item span.error {
	color: #953B39;
}

.form-item .span-item {
	display: inline-block;
	padding: 2px;
	padding-left: 6px;
}

.form-item .spacer-item {
	-webkit-user-select: none;
	   -moz-user-select: none;
	        user-select: none;
}

.form-item .ui-spinner {
	padding-right: 0;
	border: 0;
	overflow: inherit;
}
/* ... */

